[gd_scene load_steps=5 format=3 uid="uid://bi545qlj5mtfm"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_xrciq"]
[ext_resource type="Texture2D" uid="uid://d3c0wn1k1jx6d" path="res://assets/crosshair.png" id="2_sgd5n"]

[sub_resource type="LabelSettings" id="LabelSettings_wvvtw"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_w7nag"]
font_size = 40

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_xrciq")

[node name="velocityLabel" type="Label" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 31.0
offset_bottom = 63.0
text = "(0,0,0)"
label_settings = SubResource("LabelSettings_wvvtw")

[node name="VelocityLabelMag" type="Label" parent="."]
offset_left = 8.0
offset_top = 63.0
offset_right = 125.0
offset_bottom = 118.0
text = "0"
label_settings = SubResource("LabelSettings_wvvtw")

[node name="VelocityLabelAngle" type="Label" parent="."]
offset_left = 8.0
offset_top = 118.0
offset_right = 125.0
offset_bottom = 173.0
text = "0"
label_settings = SubResource("LabelSettings_wvvtw")

[node name="groundedLabel" type="Label" parent="."]
offset_left = 8.0
offset_top = 173.0
offset_right = 125.0
offset_bottom = 228.0
text = "Grounded"
label_settings = SubResource("LabelSettings_wvvtw")

[node name="FPSLabel" type="Label" parent="."]
layout_direction = 3
offset_left = 9.0
offset_top = 8.0
offset_right = 144.0
offset_bottom = 63.0
text = "FPS: 10"
label_settings = SubResource("LabelSettings_w7nag")
horizontal_alignment = 2

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sgd5n")
